fix desktopgrid window manage on VD amount change

BUG: 289747
FIXED-IN: 4.9.2
REVIEW: 106391